--- a/docs/locale/es/LC_MESSAGES/about/privacy-notice.po
+++ b/docs/locale/es/LC_MESSAGES/about/privacy-notice.po
@@ -1,32 +1,36 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2017, OpenOwnership
+# Copyright (C) 2022, Open Ownership
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
+# Carlos Hames, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
+"Project-Id-Version: Beneficial Ownership Data Standard 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-05 17:16+0000\n"
+"POT-Creation-Date: 2022-04-13 16:06+0100\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2022\n"
+"Last-Translator: Carlos Hames, 2022\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
-#: ../../about/privacy-notice.rst:2 c1eb6e79efae40e996238b950d53585f
+#: ../../about/privacy-notice.rst:2 1eb4b8aba9df48abb56b15eb0256f6ae
 msgid "Privacy Notice"
 msgstr "Aviso sobre privacidad"
 
-#: ../../about/privacy-notice.rst:4 2d46076b33b44338bc60ab366f284ab9
+#: ../../about/privacy-notice.rst:4 1ff46e4477e740fabb47ee5b066ff0c1
 msgid ""
 "Open Ownership's full privacy notice, covering all of our services, can be "
 "found at https://openownership.org/privacy on our main website"
 msgstr ""
+"El aviso de privacidad completo de Open Ownership, que cubre todos nuestros "
+"servicios, se puede encontrar en https://openownership.org/privacy en "
+"nuestro sitio web principal"
