--- a/docs/locale/ru/LC_MESSAGES/primer/whyisbo.po
+++ b/docs/locale/ru/LC_MESSAGES/primer/whyisbo.po
@@ -1,19 +1,20 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2017, OpenOwnership
+# Copyright (C) 2022, Open Ownership
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
+# Galia Williams, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
+"Project-Id-Version: Beneficial Ownership Data Standard 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-14 16:55+0000\n"
+"POT-Creation-Date: 2022-04-13 16:06+0100\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2022\n"
+"Last-Translator: Galia Williams, 2022\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,11 +22,11 @@ msgstr ""
 "Language: ru\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
-#: ../../primer/whyisbo.rst:2 089b02dedf60486ab58933507381b11c
+#: ../../primer/whyisbo.rst:2 eeacba829ea44e689c5269d5cc931346
 msgid "Why beneficial ownership is a useful concept"
 msgstr "Почему бенефициарное владение является полезной концепцией"
 
-#: ../../primer/whyisbo.rst:4 e028e2c0334c49ae82364758984a1dd1
+#: ../../primer/whyisbo.rst:4 46197d9cc9304d11bb8c6b8994bf9e11
 msgid ""
 "People can be involved in a number of companies and in different ways. By "
 "limiting our understanding of people's involvement to ownership only, we "
@@ -36,13 +37,15 @@ msgstr ""
 "только владением, то не будут учитываться такие случаи, которые приведены "
 "ниже."
 
-#: ../../primer/whyisbo.rstNone dff95da78e854b8283de8723c73119d6
+#: ../../primer/whyisbo.rstNone 044cf0408c004980913d2026493f707a
 msgid ""
 "Person A controls 60% of Company 2. And Person A owns 50% of\n"
 "Company 3"
 msgstr ""
+"Физическое лицо A контролирует 60% Компании 2. Также Физическое лицо A владеет 50%\n"
+"Компании 3"
 
-#: ../../primer/whyisbo.rst:12 4ce5a52c0b8f4589a8211e6d8ed4b06c
+#: ../../primer/whyisbo.rst:12 611814bd46bb4d5c9b95594201428ada
 msgid ""
 "The person both controls Company 1 and owns half of Company 2. This could be"
 " important to know if both companies bid for the same government contract, "
@@ -53,7 +56,7 @@ msgstr ""
 " на получение одного и того же государственного договора или если они обе "
 "являются частью цепочки закупок."
 
-#: ../../primer/whyisbo.rst:16 06310619076f4732bc86054af3eeb4c8
+#: ../../primer/whyisbo.rst:16 bf387d0734df4d7699142047248af6c9
 msgid ""
 "It might be equally important to see that a person's control over a company "
 "is greater than one might expect given their financial stake in it."
@@ -62,15 +65,20 @@ msgstr ""
 "ожидалось, контроль над компанией, учитывая долю финансового участия "
 "физического лица в компании."
 
-#: ../../primer/whyisbo.rstNone bd8e0310d7374212b2f9deaa9b007e18
+#: ../../primer/whyisbo.rstNone 79729d01511d482383095c93369672d0
 msgid ""
 "Person C controls 60% of votes in Company 2 while owning only\n"
 "20% of its stock."
 msgstr ""
+"Физическое лицо C контролирует 60% голосов в Компании 2, при этом владеет всего\n"
+"20% ее акций."
 
-#: ../../primer/whyisbo.rst:27 f676f3c3fbf8485bac0798f125638fa2
+#: ../../primer/whyisbo.rst:27 b30e2721d2c94b3e8999c9b0f9f65405
 msgid ""
 "Uniting ownership and control under the banner of beneficial ownership "
 "allows us to represent the complex reality of corporate structures, and the "
 "multiple interests a person might have in a company."
 msgstr ""
+"Если в ключе бенефициарного владения рассматривать одновременно владение и "
+"контроль, это поможет получить полную картину корпоративных структур и всех "
+"долей участия физического лица в компании."
