--- a/docs/locale/es/LC_MESSAGES/about/governance.po
+++ b/docs/locale/es/LC_MESSAGES/about/governance.po
@@ -1,46 +1,58 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2017, OpenOwnership
+# Copyright (C) 2022, Open Ownership
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
+# Carlos Hames, 2022
+# Agustina De Luca, 2022
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
+"Project-Id-Version: Beneficial Ownership Data Standard 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-05 17:16+0000\n"
+"POT-Creation-Date: 2022-04-13 16:06+0100\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2022\n"
+"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
-#: ../../about/governance.rst:2 14b476cefc594c86baa90487cb36c7b8
+#: ../../about/governance.rst:2 7e8a050efbd343ca85e715133409e797
 msgid "Governance"
 msgstr "Gobernanza"
 
-#: ../../about/governance.rst:4 735b0006790a4073a6e5cb09b7b2d485
+#: ../../about/governance.rst:4 d5e562497c5b4900af39bc67c0735d47
 msgid ""
 "BODS is developed by `Open Ownership <https://www.openownership.org/>`__, a "
 "non-profit organisation focused on beneficial ownership transparency, in "
 "partnership with `Open Data Services <https://opendataservices.coop/>`__."
 msgstr ""
+"BODS es desarrollado por `Open Ownership "
+"<https://www.openownership.org/>`__, una organización sin fines de lucro "
+"enfocada en la transparencia de beneficiarios finales, en asociación con "
+"`Open Data Services <https://opendataservices.coop/>`__."
 
-#: ../../about/governance.rst:6 22e4f3480563442586c4634f4dcef83d
+#: ../../about/governance.rst:6 e10c94ee4c784bfea28a8e5c1b22992a
 msgid ""
 "An open `data standard working group "
 "<https://standard.openownership.org/en/latest/about/governance.html>`__ of "
 "data experts, beneficial ownership specialists and other interested parties "
 "also provide advice and help guide the development of BODS."
 msgstr ""
+"Un `grupo de trabajo abierto de estándares de datos "
+"<https://standard.openownership.org/en/latest/about/governance.html>`__ "
+"compuesto por expertos en datos, especialistas en beneficiarios finales y "
+"otras partes interesadas también brinda asesoramiento y ayuda a guiar el "
+"desarrollo de BODS."
 
-#: ../../about/governance.rst:8 7d741713791d48bb9f18735ceab1a7e0
+#: ../../about/governance.rst:8 ac93062eee6340da86ef4dedd5aabe28
 msgid ""
 "The working group is co-chaired by Open Ownership and Open Data Services - "
 "and anyone can apply to join the group by `filling out this form "
@@ -49,27 +61,42 @@ msgid ""
 "through a `Google group "
 "<https://groups.google.com/a/openownership.org/g/data-standard-wg>`__."
 msgstr ""
+"El grupo de trabajo está copresidido por Open Ownership y Open Data "
+"Services, y cualquiera puede solicitar unirse al grupo `completando este "
+"formulario "
+"<https://docs.google.com/forms/d/e/1FAIpQLSdRSmSUxyyv2t1k3vWXZ_3EhTW_f603MeGxgyjKnbNNE9vvbQ/viewform>`__."
+" Las reuniones de grupos virtuales se llevan a cabo trimestralmente y la "
+"comunicación se coordina a través de un `grupo de Google "
+"<https://groups.google.com/a/openownership.org/g/data-standard-wg>`__."
 
-#: ../../about/governance.rst:11 902381fbc21c423cb18fb10ef0ab291c
+#: ../../about/governance.rst:11 1295ea1f175f4240a197283781a294a2
 msgid "Data Standard Working Group - Terms of Reference"
-msgstr ""
+msgstr "Grupo de Trabajo sobre Estándares de Datos - Términos de Referencia"
 
-#: ../../about/governance.rst:13 71899ba280d64773aa25e2563a81f827
+#: ../../about/governance.rst:13 3fedddb7a852443c9d546f9dc891ba08
 msgid ""
 "The data standard working group helps drive the development of BODS, an open"
 " data standard designed to reduce the technical barriers to the collection "
 "and re-use of beneficial ownership data."
 msgstr ""
+"El grupo de trabajo de estándar de datos ayuda a impulsar el desarrollo de "
+"BODS, un estándar de datos abiertos diseñado para reducir las barreras "
+"técnicas para la recopilación y reutilización de datos de beneficiarios "
+"finales."
 
-#: ../../about/governance.rst:15 f800ab9666f440b9a60dd3f17dea04ee
+#: ../../about/governance.rst:15 35fd041a228e45a6a3c02db4331ded13
 msgid ""
 "This working group is open to all and includes stakeholders from a range of "
 "backgrounds with an interest and expertise in data relating to corporate "
 "control or beneficial ownership, and to the use of such data in the public "
 "interest."
 msgstr ""
+"Este grupo de trabajo está abierto a todos e incluye actores con una "
+"variedad de antecedentes con interés y experiencia en datos relacionados con"
+" el control corporativo o beneficiarios finales, y con el uso de dichos "
+"datos en el interés público."
 
-#: ../../about/governance.rst:17 f800ab9666f440b9a60dd3f17dea04ee
+#: ../../about/governance.rst:17 8e542f45a93942a0ae05d3a48c290002
 msgid ""
 "While the development of the standard will take place through an open "
 "process, to which anyone can contribute, working group members take on a "
@@ -77,12 +104,17 @@ msgid ""
 "requirements, user needs and technical considerations are taken into "
 "account."
 msgstr ""
+"Si bien el desarrollo del estándar se llevará a cabo a través de un proceso "
+"abierto, al que cualquiera puede contribuir, los miembros del grupo de "
+"trabajo asumen la responsabilidad de guiar el desarrollo de BODS y "
+"garantizar que se tengan en cuenta los requisitos relevantes, las "
+"necesidades de los usuarios y las consideraciones técnicas."
 
-#: ../../about/governance.rst:20 491cb5383c0047409414674ca7d8cba8
+#: ../../about/governance.rst:20 471ce148406a4bb4974995b78007612b
 msgid "Values"
 msgstr "Valores"
 
-#: ../../about/governance.rst:22 1e75801ff89d4b21815bd4898821ee1a
+#: ../../about/governance.rst:22 f36ac4b8ed9749cd9c94539333cafec5
 msgid ""
 "All working group members must commit to support the following shared "
 "values."
@@ -90,28 +122,28 @@ msgstr ""
 "Todos los miembros del grupo de trabajo deben comprometerse a apoyar los "
 "siguientes valores compartidos."
 
-#: ../../about/governance.rst:24 97de4933edca4a7abdf6ab234799ac23
+#: ../../about/governance.rst:24 c099747c194843deb88a2796a8f59643
 msgid "**Open**"
 msgstr "**Apertura**"
 
 #: ../../about/governance.rst:26 ../../about/governance.rst:34
-#: 01a8d5333c5a4aeb9d5d0580265c0373 01a8d5333c5a4aeb9d5d0580265c0373
+#: fe09b746398e49efa95d4599d96549fb f41aac62c57342e390774efc005ad3f0
 msgid "We will:"
 msgstr "Nos aseguraremos de:"
 
-#: ../../about/governance.rst:28 7d3db2dc1df044cc87754273e7323326
+#: ../../about/governance.rst:28 14da21794c084516a93746f517ccacd5
 msgid "share our views and plans, and share knowledge as widely as possible;"
 msgstr ""
 "comunicar nuestras perspectivas y planes, y compartir conocimientos de la "
 "forma más amplia posible;"
 
-#: ../../about/governance.rst:29 3ccadb5eaee44511a0cfe31ad7761106
+#: ../../about/governance.rst:29 db4fa75f53bc492e99e3b0e3a1c6c0de
 msgid "solicit and listen to views from end users and stakeholders;"
 msgstr ""
-"procurar y escuchar las opiniones de los usuarios finales y las partes "
+"solicitar y escuchar las opiniones de los usuarios finales y las personas "
 "interesadas;"
 
-#: ../../about/governance.rst:30 6edb52fa6bfb46838431b45a1fd8cea5
+#: ../../about/governance.rst:30 334735bee1264adaa0de365a294aa90b
 msgid ""
 "make our outputs available under an open licence and abide by the project "
 "`contributor agreement <https://github.com/openownership/data-"
@@ -121,63 +153,67 @@ msgstr ""
 " con `el convenio de contribución  <https://github.com/openownership/data-"
 "standard/blob/master/CONTRIBUTING.md>`_ del proyecto."
 
-#: ../../about/governance.rst:32 6cbbed1ec66a4a32a876a24daf257337
+#: ../../about/governance.rst:32 7b92a3de5c6c4425b143fcc0b1a10c53
 msgid "**Expert**"
 msgstr "**Pericia**"
 
-#: ../../about/governance.rst:36 4e5682ca712a4dbb83288e8cf106aa27
+#: ../../about/governance.rst:36 0588be13990045a28131756de710a4a0
 msgid "bring our expertise to the discussion as individuals;"
-msgstr "aportar nuestra pericia al debate como individuos;"
+msgstr "aportar nuestro conocimiento al debate como individuos;"
 
-#: ../../about/governance.rst:37 6fda953dd096412cb75ab9ba244cb1f1
+#: ../../about/governance.rst:37 702e33f7e67f499db752ce7cbed70aa2
 msgid ""
 "use our expertise to synthesise the views of others in constructive and "
 "forward-thinking proposals;"
 msgstr ""
-"utilizar nuestra pericia para resumir los puntos de vista de los demás en "
-"propuestas constructivas y con visión de futuro;"
+"utilizar nuestro conocimiento para resumir los puntos de vista de los demás "
+"en propuestas constructivas y con visión de futuro;"
 
-#: ../../about/governance.rst:38 7ee9cfad560a4c31bbbedf73ed51ab76
+#: ../../about/governance.rst:38 3a50d7d3df5042208cd906055eedfd26
 msgid "use good judgement to respect privacy and confidentiality."
 msgstr ""
 "proceder con buen juicio a fin de respetar la privacidad y la "
 "confidencialidad."
 
-#: ../../about/governance.rst:40 c5ea24feb17d4ad5ad6fd4f4ebf2d2ac
+#: ../../about/governance.rst:40 ef9ba7e0499c4180b0049b26471fa6ab
 msgid "**Collaborative**"
-msgstr "**Colaboración**"
+msgstr "**Colaborativo**"
 
-#: ../../about/governance.rst:42 5fe3e799de6a4c36a9d5d6487821ceec
+#: ../../about/governance.rst:42 adb69b3dd48d4e0087b4cb0fd2142490
 msgid "We will"
 msgstr "Nos aseguraremos de:"
 
-#: ../../about/governance.rst:44 5d5c4db44fa14cf08107e937fb0c49fa
+#: ../../about/governance.rst:44 5c904db18dc14bf1a691ce658a6061c9
 msgid "support each other in discussion, in decisions, and in delivery;"
 msgstr ""
 "apoyarnos mutuamente en los debates, en las decisiones y en la ejecución;"
 
-#: ../../about/governance.rst:45 c136e31d174b41d7ba20f6f5b7ba171e
+#: ../../about/governance.rst:45 8370721545d24f62b586470446e3675e
 msgid "operate on the basis of consensus decision making;"
 msgstr "actuar sobre la base de la toma de decisiones por consenso;"
 
-#: ../../about/governance.rst:46 de43604f65894c1f9255361138ca0690
+#: ../../about/governance.rst:46 cf743adf212b464b93645206a56cdf08
 msgid "constructively hold each other to account on our commitments;"
 msgstr ""
 "exigirnos los unos a los otros rendiciones de cuentas sobre nuestros "
 "compromisos de manera constructiva;"
 
-#: ../../about/governance.rst:47 d0f7924bb0644356b12a8ba2350cfb8d
+#: ../../about/governance.rst:47 dfe3d934160c40f99d63879fedbb5488
 msgid "ensure all voices are heard and considered carefully."
 msgstr ""
 "garantizar que todas las voces sean escuchadas y consideradas atentamente."
 
-#: ../../about/governance.rst:50 97c7baa0531a492c901e8d8f66987004
+#: ../../about/governance.rst:50 3948001abf7b42ec936db33da93c9411
 msgid "Membership, term and role"
-msgstr "Condición de miembro, duración del mandato y roles"
+msgstr "Membresía, duración del mandato y roles"
 
-#: ../../about/governance.rst:52 2943a5244aed472fa6559daeaa1c9cd8
+#: ../../about/governance.rst:52 0411ac2d46644953a5f4a8cf7c6986f9
 msgid ""
 "Membership of the working group is a voluntary responsibility. Members "
 "should be prepared to join quarterly virtual group calls and respond to "
 "issues via GitHub or email."
 msgstr ""
+"Ser miembro del grupo de trabajo es una responsabilidad voluntaria. Los "
+"integrantes deben estar preparados para unirse a llamadas grupales virtuales"
+" trimestrales y responder a problemas a través de GitHub o correo "
+"electrónico."
