--- a/docs/locale/es/LC_MESSAGES/schema/guidance/provenance.po
+++ b/docs/locale/es/LC_MESSAGES/schema/guidance/provenance.po
@@ -1,31 +1,32 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2017, OpenOwnership
+# Copyright (C) 2022, Open Ownership
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
+"Project-Id-Version: Beneficial Ownership Data Standard 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-14 16:55+0000\n"
+"POT-Creation-Date: 2022-04-13 16:06+0100\n"
 "PO-Revision-Date: 2022-04-05 16:57+0000\n"
-"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2022\n"
+"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
-#: ../../schema/guidance/provenance.rst:4 c55576f4aee8460aaf278d89cc6eeb1c
+#: ../../schema/guidance/provenance.rst:4 f2b03bdeb8b846ef939f5556a4439c1c
 msgid "Sources and annotations"
 msgstr "Fuentes y notas"
 
-#: ../../schema/guidance/provenance.rst:6 3694604e3f5a41f7b94406646a24045f
+#: ../../schema/guidance/provenance.rst:6 eab10d0776bb40bfb02e2ebf5f11fb6d
 msgid ""
 "It is important to indicate clearly where data has come from, and any "
 "changes to it that have been made since it was originally collected."
@@ -34,7 +35,7 @@ msgstr ""
 "cambio que se haya aplicado a ellos desde que se recopilaron por primera "
 "vez."
 
-#: ../../schema/guidance/provenance.rst:8 a9e648678fce441986b255d1f57b7bed
+#: ../../schema/guidance/provenance.rst:8 d08cdced920f421e8a5eb46889610a51
 msgid ""
 "Each statement SHOULD contain information on its source, and whether or not "
 "the information it contains has been verified. (For example, a statement may"
@@ -48,15 +49,15 @@ msgstr ""
 "autodeclaración, y puede o no haber sido chequeada mediante algún proceso "
 "para verificar que la información proporcionada sea precisa.)"
 
-#: ../../schema/guidance/provenance.rst:10 771e64268f2943288acc101438e3fe3d
+#: ../../schema/guidance/provenance.rst:10 fcabbc2191b94889b6fbf140be0024dc
 msgid ""
 "The ``source`` property of each statement MAY be used to provide provenance "
 "information."
 msgstr ""
-"La propiedad ``fuente`` de cada declaración PUEDE utilizarse para brindar "
+"La propiedad ``source`` de cada declaración PUEDE utilizarse para brindar "
 "información sobre su procedencia."
 
-#: ../../schema/guidance/provenance.rst:12 6f3f2120db9a40649a5a6ab6268a19ea
+#: ../../schema/guidance/provenance.rst:12 eb040e633c5548e7a4fec1c60a93fb77
 msgid ""
 "The ``annotations`` property of each statement MAY be used to provide "
 "additional contextual information at the level of a whole statement, a sub-"
@@ -68,14 +69,14 @@ msgid ""
 "these changes SHOULD be recorded as annotations, to allow users to clearly "
 "understand the provenance of information."
 msgstr ""
-"La propiedad ``nota`` de cada declaración PUEDE utilizarse para brindar "
-"información contextual adicional a nivel de una declaración completa, un "
-"subobjeto o una propiedad individual. Por ejemplo, podría utilizarse una "
-"nota para incluir información estructurada que detalle la naturaleza de la "
-"participación que una persona física tiene en una empresa. En algunos casos,"
-" los sistemas que procesan datos basados en BODS pueden realizar cambios "
-"para limpiar, mejorar o actualizar de algún otro modo los datos, p. ej. "
-"conciliar los nombres de las empresas con los identificadores. En este caso,"
-" los detalles de dichos cambios DEBERÍAN registrarse como notas, a fin de "
-"posibilitar que los usuarios comprendan claramente la procedencia de la "
-"información."
+"La propiedad ``annotations`` de cada declaración PUEDE utilizarse para "
+"brindar información contextual adicional a nivel de una declaración "
+"completa, un subobjeto o una propiedad individual. Por ejemplo, podría "
+"utilizarse una nota para incluir información estructurada que detalle la "
+"naturaleza de la participación que una persona física tiene en una empresa. "
+"En algunos casos, los sistemas que procesan datos basados en BODS pueden "
+"realizar cambios para limpiar, mejorar o actualizar de algún otro modo los "
+"datos, p. ej. conciliar los nombres de las empresas con los identificadores."
+" En este caso, los detalles de dichos cambios SHOULD registrarse como notas,"
+" a fin de posibilitar que los usuarios comprendan claramente la procedencia "
+"de la información."
