--- a/docs/locale/es/LC_MESSAGES/schema/guidance/updating-data.po
+++ b/docs/locale/es/LC_MESSAGES/schema/guidance/updating-data.po
@@ -1,31 +1,32 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2017, OpenOwnership
+# Copyright (C) 2022, Open Ownership
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
+# Stephen Abbott Pugh <stephen@openownership.org>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
+"Project-Id-Version: Beneficial Ownership Data Standard 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-14 16:55+0000\n"
+"POT-Creation-Date: 2022-04-13 16:06+0100\n"
 "PO-Revision-Date: 2022-04-05 16:57+0000\n"
-"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2022\n"
+"Last-Translator: Stephen Abbott Pugh <stephen@openownership.org>, 2022\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
-#: ../../schema/guidance/updating-data.rst:4 da520de779964241ba737a743dc31989
+#: ../../schema/guidance/updating-data.rst:4 7d7ea04847bb403385fb6979a22b7f1b
 msgid "Updating statements"
 msgstr "Actualización de declaraciones"
 
-#: ../../schema/guidance/updating-data.rst:6 ef3e79255e454dd9ae187c7b92649d60
+#: ../../schema/guidance/updating-data.rst:6 d4ab3fa7d7c74d52a519b47446d7c920
 msgid ""
 "Statements MUST be treated as immutable: once a statement is published it "
 "MUST NOT be republished with the same ``statementID`` and different property"
@@ -35,12 +36,11 @@ msgid ""
 msgstr ""
 "Las declaraciones DEBEN tratarse como inalterables: una vez que se publica "
 "una declaración, ésta NO DEBE volver a publicarse con la misma "
-"``identificaciónDeDeclaración`` y diferentes valores de propiedades. La "
-"propiedad ``reemplazaDeclaraciones`` puede usarse para indicar que una "
-"declaración debería considerarse como un reemplazo de una o más "
-"declaraciones anteriores."
+"``statementID`` y diferentes valores de propiedades. La propiedad "
+"``replacesStatements`` puede usarse para indicar que una declaración debería"
+" considerarse como un reemplazo de una o más declaraciones anteriores."
 
-#: ../../schema/guidance/updating-data.rst:8 aaf708e7f55f44e1bf2db49832f40d85
+#: ../../schema/guidance/updating-data.rst:8 719127518ec44666b2308a103399aea4
 msgid ""
 "Therefore, if a particular value needs to be updated, a new statement with a"
 " new ``statementID`` MUST be published and the ``replacesStatements`` "
