--- a/docs/locale/es/LC_MESSAGES/schema/index.po
+++ b/docs/locale/es/LC_MESSAGES/schema/index.po
@@ -1,46 +1,54 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2017, OpenOwnership
+# Copyright (C) 2022, Open Ownership
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
+# Agustina De Luca, 2022
+# Stephen Abbott Pugh <stephen@openownership.org>, 2022
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
+"Project-Id-Version: Beneficial Ownership Data Standard 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-14 16:55+0000\n"
+"POT-Creation-Date: 2022-04-13 16:06+0100\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2022\n"
+"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
-#: ../../schema/index.rst:2 1601d5c063c8455db56471adb405e128
+#: ../../schema/index.rst:2 011128bfa3b34b3e8ca597afee954442
 msgid "Data Schema"
 msgstr "Esquema de datos"
 
-#: ../../schema/index.rst:6 2b5e966efb924a1ba7c1d496fd84d9d0
+#: ../../schema/index.rst:6 ee5a99f451b44ce389b969e3baec96d2
 msgid ""
-"This is v0.2 of the Beneficial Ownership Data Standard. It includes updates "
-"to the data model and additional codelist information. Implementers should "
-"be aware that future changes are anticipated, before a version 1.0 release. "
-"See the :doc:`Changelog <changelog>` and `About <../about>`_ pages for more "
-"information."
+"This is v0.3 of the Beneficial Ownership Data Standard. It includes updates "
+"to the data model and codelists as well as additional technical guidance."
 msgstr ""
-"Esta es la vers. 0.2 del Estándar de Datos sobre Beneficiarios Finales. "
-"Incluye actualizaciones del modelo de datos e información adicional de la "
-"lista de códigos. Cabe señalar a los implementadores que se esperan cambios "
-"a futuro antes de la publicación de la versión 1.0. Consulte las páginas "
-":doc:`Registro de modificaciones <changelog>` y `De qué se trata "
-"<../about>`_ para obtener más información."
+"Esta es la versión 0.3 del Estándar de Datos de Beneficiarios Finales. "
+"Incluye actualizaciones del modelo de datos y listas de códigos, así como "
+"orientación técnica adicional."
 
-#: ../../schema/index.rst:8 3eda14ad33ce478ba82956815ec94282
+#: ../../schema/index.rst:8 ccfdc07c173f40fa9afd572e89f4a199
+msgid ""
+"Implementers should be aware that future changes are anticipated, before a "
+"version 1.0 release. See the :doc:`Changelog <changelog>` and `About "
+"<../about>`_ pages for more information."
+msgstr ""
+"Los implementadores deben saber que se anticipan cambios futuros, antes del "
+"lanzamiento de la versión 1.0. Consulte las páginas :doc:`Registro de "
+"modificaciones <changelog>` y `Acerca de <../about>`_ para obtener más "
+"información."
+
+#: ../../schema/index.rst:10 42d59b885c564e17b84eb3370da560c3
 msgid ""
 "**MUST** and **SHOULD** are used in the schema to denote required and "
 "recommended elements of the Standard, as defined in `RFC2119 "
@@ -50,7 +58,7 @@ msgstr ""
 "requeridos y recomendados del Estándar, conforme a lo definido en `RFC2119 "
 "<https://tools.ietf.org/html/rfc2119>`_."
 
-#: ../../schema/index.rst:10 37bb1ca06ca74638859927c88eea5dc5
+#: ../../schema/index.rst:12 a727f96865d348dfafee5740754e190c
 msgid ""
 "BODS provides a common data model for encapsulating information about the "
 ":doc:`beneficial ownership <../primer/whatisbo>` of corporate entities and "
@@ -69,7 +77,7 @@ msgstr ""
 "empresas) de otras entidades (incluidos los fideicomisos y las "
 "participaciones accionarias conjuntas) o de personas físicas."
 
-#: ../../schema/index.rst:12 336109a6b93f4d149f7cd5f8f12248d3
+#: ../../schema/index.rst:14 65e7bdfc43e54c2d9567c4400e505c17
 msgid ""
 "The data model, as specified here in the Data Schema, is intended to "
 "represent, or help identify, ultimate beneficial ownership: the natural "
@@ -80,7 +88,7 @@ msgstr ""
 "finales en última instancia: la(s) persona(s) física(s) que en última "
 "instancia se beneficia(n) de una entidad o la controlan."
 
-#: ../../schema/index.rst:14 86dda99ff53540449bf52a9e9a990d49
+#: ../../schema/index.rst:16 e2a1c6a8b733405ea95f521d52b6dbd1
 msgid ""
 "The :doc:`schema browser <schema-browser>` provides a way of digging through"
 " the schema's structure, showing how its components and fields fit together."
@@ -92,11 +100,11 @@ msgstr ""
 "entre sí. Alternativamente, las :doc:`referencias del esquema <reference>` "
 "presentan estos elementos y sus descripciones en tablas de fácil referencia."
 
-#: ../../schema/index.rst:16 275734231b8d429dbdc8f08d9d8f152c
+#: ../../schema/index.rst:18 3a5cecec57cb4b4887a4516878a94929
 msgid ""
 "Further considerations regarding the validation, publishing, and lifecycle "
 "of data are included in `technical guidance <guidance>`_."
 msgstr ""
 "En la `orientación técnica <guidance>`_ se incluyen consideraciones "
-"ulteriores acerca de la validación, la publicación y el ciclo de vida de los"
-" datos."
+"adicionales acerca de la validación, la publicación y el ciclo de vida de "
+"los datos."
