--- a/docs/locale/ru/LC_MESSAGES/about/privacy-notice.po
+++ b/docs/locale/ru/LC_MESSAGES/about/privacy-notice.po
@@ -1,19 +1,20 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2017, OpenOwnership
+# Copyright (C) 2022, Open Ownership
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
+# Galia Williams, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
+"Project-Id-Version: Beneficial Ownership Data Standard 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-05 17:16+0000\n"
+"POT-Creation-Date: 2022-04-13 16:06+0100\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2022\n"
+"Last-Translator: Galia Williams, 2022\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,12 +22,15 @@ msgstr ""
 "Language: ru\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
-#: ../../about/privacy-notice.rst:2 c1eb6e79efae40e996238b950d53585f
+#: ../../about/privacy-notice.rst:2 1eb4b8aba9df48abb56b15eb0256f6ae
 msgid "Privacy Notice"
 msgstr "Уведомление о конфиденциальности"
 
-#: ../../about/privacy-notice.rst:4 2d46076b33b44338bc60ab366f284ab9
+#: ../../about/privacy-notice.rst:4 1ff46e4477e740fabb47ee5b066ff0c1
 msgid ""
 "Open Ownership's full privacy notice, covering all of our services, can be "
 "found at https://openownership.org/privacy on our main website"
 msgstr ""
+"Полную версию уведомления о конфиденциальности Open Ownership, в которой "
+"описаны все наши услуги, можно найти по ссылке "
+"https://openownership.org/privacy на нашем основном сайте."
