--- a/docs/locale/ru/LC_MESSAGES/primer/index.po
+++ b/docs/locale/ru/LC_MESSAGES/primer/index.po
@@ -1,19 +1,20 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2017, OpenOwnership
+# Copyright (C) 2022, Open Ownership
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
+"Project-Id-Version: Beneficial Ownership Data Standard 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-14 16:55+0000\n"
+"POT-Creation-Date: 2022-04-13 16:06+0100\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2022\n"
+"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,11 +22,11 @@ msgstr ""
 "Language: ru\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
-#: ../../primer/index.rst:2 b4de10c2aaaf4c0587001029f44e5cb9
+#: ../../primer/index.rst:2 81df7cc3e24a4604af49190cfd439a01
 msgid "Primer"
 msgstr "Базовая информация"
 
-#: ../../primer/index.rst:4 75dd4a06d1b041cf93139818bb8df9ac
+#: ../../primer/index.rst:4 f698456e9bf9473f8cc05a97e93c277a
 msgid ""
 "This Primer sets out to explain the basics of Beneficial Ownership and the "
 "basics of a data standard handling Beneficial Ownership."
@@ -33,7 +34,7 @@ msgstr ""
 "В этой Базовой информации объясняются основы Бенефициарного владения и "
 "основы стандарта данных о Бенефициарном владении."
 
-#: ../../primer/index.rst:6 9456a5fd3d8541b487006614e7a0640c
+#: ../../primer/index.rst:6 2a217fdd476c4222926a0d3780680c6e
 msgid ""
 "People new to the concept of Beneficial Ownership will want to know "
 ":doc:`what it is <whatisbo>` and :doc:`why it's important <whyisbo>`. "
@@ -44,8 +45,8 @@ msgid ""
 msgstr ""
 "Те, для кого концепция Бенефициарного владения является новой, захотят "
 "узнать, :doc:`что она собой представляет <whatisbo>` и :doc:`почему является"
-" важной <whyisbo> `. Затем, ознакомившись с тем, :doc:`какие данные "
-"необходимы <whatisbodata>` для описания цепочки Бенефициарного владения, `мы"
-" сможем понять Стандарт данных о бенефициарном владении <whatisthebods> ` "
-"как своего рода шаблон. В заключение мы `рассмотрим охват Стандарта "
-"<whatdoesbodscover> ` и предлагаемые им возможности."
+" важной <whyisbo>`. Затем, ознакомившись с тем, :doc:`какие данные "
+"необходимы <whatisbodata>` для описания цепочки Бенефициарного владения, "
+":doc:`мы сможем понять Стандарт данных о бенефициарном владении "
+"<whatisthebods>` как своего рода шаблон. В заключение мы :doc:`рассмотрим "
+"охват Стандарта <whatdoesbodscover>` и предлагаемые им возможности."
